ec2.tf
resource "aws_instance" "web" {

  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
  tags = {
    Name = "terraform-ec2"
  }
}
